package es.uah.matcomp.mp.e1.ejerciciosclases.MatCompMPEL1d.ClasesAbstractas;

public abstract class Animal {
    String name;

    Animal(String name) {
        this.name = name;
    }

    abstract void greets();
}